flask_app/Static/style.css
* {
    box-sizing: border-box;
}

body,
html {
    background-color: white;
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    height: 100%;
}

.selection {
    border: 2px solid green;
    display: flex;
    align-items: end;
    gap: 10px;
}

.official_header {
    text-align: center;
    height: 5rem;
    width: 100%;
    z-index: 2;
    text-align: start;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: end;
    color: green;
}

.official_header_dropdowns {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
    width: 100%;
    padding-right: -10px;
}

.official_sidebar {
    text-align: center;
    height: 100vh;
    width: 10rem;
    position: fixed;
    top: 0;
    z-index: 1;
    border-right: 2px solid red;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    box-shadow: 0px 0px 50px red;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.official_contact_info {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: start;
    text-align: start;
    height: 100%;
    width: 100%;
    gap: 20px;
    padding: 20px;
}

.reps {
        text-align: center;
        height: 10vh;
        width: 100%;
        border-right: 2px solid red;
        border-bottom-left-radius: 10px;
        border-bottom-right-radius: 10px;
        box-shadow: 0px 0px 50px red;
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-color: black;
        color: white;
        margin: 0 0 5rem 0;
        padding: 0;
    }


    .state-page-dropdowns{
        display: flex;
        flex-direction: row;
    }

    .sen-box {
        width: 90vw;
        display: flex;
        flex-wrap: wrap;
        border-top-left-radius: 10px;
        border-top-right-radius: 10px;
        align-items: center;
        justify-content: start;
        flex-direction: row;
        margin: 0;
        padding: 0;
        gap: 10px;
    }

    .state-button{
        margin: 0 5rem;
    }


.sidebar_links {
    height: 50%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    margin: 20px;
    gap: 3rem
}
.official_left_div {
    text-align: start;
    height: 150vh;
    width: 10rem;
    top: 0;
}

.official_button_div {
    display: flex;
    justify-content: start;
    text-align: start;
}

.official_right_div {
    text-align: center;
    height: 150vh;
    width: 10rem;
    top: 0;
    margin: 0rem 0;
}

.official_site_nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    height: 100%;
    width: 100%;
    border-left: 2px solid red;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    box-shadow: 0px 0px 50px red;

    /* position: fixed; */
}

#alertsContainer {
    position:absolute;
    top: 0;
    right: 0rem;
    width: 20rem; 
}

.official_container {
    display: flex;
    align-items: start;
    justify-content: space-between;
    min-height: 100%;
    width: 100%;
}

.user_avatar {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    position: absolute;
    top: -9px;
    right: -22px;
    border: 1px solid red;
}

.official_cards {
    padding: 20px;
    gap: 30px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    flex-wrap: wrap;
}

.official_cards li {
    margin: auto;
}

.card_link {
    text-decoration: none;
    color: black;
}

.dropdown-menu {
    max-height: 25vh;
    overflow-y: auto;
}

#myInput {
    box-sizing: border-box;
    background-image: url('searchicon.png');
    background-position: 14px 12px;
    background-repeat: no-repeat;
    font-size: 16px;
    padding: 14px 20px 12px 45px;
    border: none;
    border-bottom: 1px solid #ddd;
}

#myInput:focus {
    outline: 3px solid #ddd;
}

my_dropdown button {
    background-color: red;
    color: white;
}

